# mpx-sdk

./: .gitattributes  .gitignore  HOST_FUNCTIONS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
examples/hello-wasm/include/: mpx_host.h
examples/hello-wasm/src/: test_skill.c  test_skill.ts  test_skill.wat
examples/robot-demo/include/: mpx_host.h
examples/robot-demo/src/: robot_skill.c  robot_skill.ts  robot_skill.wat
mpx-cli/: pyproject.toml
mpx-cli/src/mpx_cli/: __init__.py  __main__.py  cli.py
mpx-cli/src/mpx_cli/commands/: __init__.py  build.py  delete.py  init.py  list_skills.py  run.py  upload.py
mpx-cli/src/mpx_cli/commands/resource/: README_c.md.template  README_ts.md.template  README_wat.md.template  host_functions_wat.md  mpx_env.ts  mpx_host.h  skill.c.template  skill.ts.template  skill.wat.template
mpx-cli/src/mpx_cli/sdk/: __init__.py  connection.py  mpx_env.ts  mpx_host.h  toolchain.py
